[tool.poetry]
name = "get-onboarding-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
isort = "^5.10.1"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
